‘为第一堂课添加图片’

--- a/课堂记录.md
+++ b/课堂记录.md
@@ -1,9 +1,15 @@
 # 课堂记录
 
-2020.12.01
-例题1
-  对数函数、对勾函数
-  函数与图像  
-  问题是怎么体现在图像上的、猜测、验证
+## 2020.12.01
 
-  添加新内容
+### 例题1
+
+​	对数函数、对勾函数
+
+​	函数与图像 
+
+​	问题是怎么体现在图像上的、猜测、验证
+
+![例题1](https://github.com/JZZ-NOTE/family-education-picture/raw/main/%E4%BE%8B%E9%A2%981.jpg)
+
+![例题1答案](https://github.com/JZZ-NOTE/family-education-picture/raw/main/%E4%BE%8B%E9%A2%981%E7%AD%94%E6%A1%88.jpg)
