--- a/课堂记录.md
+++ b/课堂记录.md
@@ -15,3 +15,42 @@
 ![例题1](https://github.com/JZZ-NOTE/family-education-picture/raw/main/1.1.jpg)
 
 ![例题1答案](https://github.com/JZZ-NOTE/family-education-picture/raw/main/1.1(1).jpg)
+
+## 2020.12.03
+
+### 2
+
+#### 2.2
+
+​	分段函数，带参的一次函数与对数函数，值域为R，求参。P76-11
+
+# 第三课 函数图像及其变换
+
+## 函数图像
+
+### 一次函数
+
+### 二次函数
+
+### 三次函数、四次函数
+
+### 指数函数
+
+### 对数函数
+
+### 幂函数
+
+## 函数变换
+
+### 平移
+
+### 对称
+
+
+
+
+
+
+
+
+
